# harmoni-server

./: Cargo.toml  LICENSE  README.md  edgedb.toml
.github/workflows/: rust.yml  workflow.yml
dbschema/: default.esdl
dbschema/migrations/: 00001.edgeql  00002.edgeql  00003.edgeql  00004.edgeql  00005.edgeql  00006.edgeql
src/: db.rs  jwtauth.rs  main.rs  tests.rs
