[package]
name = "harmoni"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
axum = { git = "https://github.com/tokio-rs/axum.git", features = ["ws"] } # until axum hits 0.7
axum-extra = { git = "https://github.com/tokio-rs/axum.git", features = ["typed-header"] } # until axum hits 0.7
futures = "0.3.28"
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1.0.162", features = ["derive"] }
tokio = { version = "1.28.0", features = ["full"] }
tokio-tungstenite = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

edgedb-tokio = { git = "https://github.com/edgedb/edgedb-rust" }
edgedb-derive = { git = "https://github.com/edgedb/edgedb-rust" }
edgedb-protocol = { git = "https://github.com/edgedb/edgedb-rust" }
jsonwebtoken = "8.3.0"
once_cell = "1.17.1"
serde_json = "1.0.96"

[dev-dependencies]
tower = { version = "0.4.13", features = ["util"] }
